2009-03-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sqrtm.R (sqrtm): allow negative eigenvalues, with a
	message iff "verbose"; use sqrt(<complex>) in that case.
	* R/logm.Higham08.R (logm.Higham08): allow negative eigenvalues,
	as in sqrtm.

	* R/expmCond-all.R (.expmCond.1, .expmFrechet2008.26): and others;
	cosmetic (speedy!) improvements; dating of Feb.23.

2009-02-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.96-1, Matrix

	* src/logm-eigen.c (logm_eigen): *do* signal an error, not just
	print; as the help page has always said.

	* man/logm.Rd: comment 'order' and 'trySym' out; introduce
	method = "Higham08" and make it the default (!)
	* R/logm.R: ditto

	* R/logm.Higham08.R: new logm.Higham08() from Michael Stadelmann's thesis.
	* R/sqrtm.R: new sqrtm(), ditto
	* NAMESPACE: add here.
	* tests/log+sqrt.R: tests for these; notably small non-diagonalizable cases

	* R/expm2.R (expm.Higham08): renamed 'expm2' to expm.Higham08

2009-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.95-1
	* R/expmCond-all.R: only public expmCond(*, method=.) function,
		instead of expmCond1Est() etc.
	* man/expmCond.Rd:   ditto
	* tests/expm-Cond.R: ditto

2009-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Maintainer): myself, for the moment; need to get
	E-mail feedback from win-builder.

	* tests/expm-Cond.R: new tests for expmCond*()

	* tests/exact-ex.R: factor the utilities out into new file; add expm2()
	* demo/exact-fn.R:  containing only (function + data) definitions

2009-02-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expmCond-all.R (expmFrechet): method "blockEnlarge", also for testing
	* man/expmFrechet.Rd:             the default method

2009-02-17  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.95-0

	* R/expm2.R (expm2): new algorithms from Michael Stadelmann's
	Master thesis work